--- a/src/frontend/Cargo.toml
+++ b/src/frontend/Cargo.toml
@@ -26,6 +26,7 @@ parking_lot = "0.12"
 paste = "1"
 pgwire = { path = "../utils/pgwire" }
 rand = "0.8"
+regex = "1"
 risingwave_common = { path = "../common" }
 risingwave_expr = { path = "../expr" }
 risingwave_meta = { path = "../meta" }
