--- a/src/frontend/test_runner/tests/testdata/struct_query.yaml
+++ b/src/frontend/test_runner/tests/testdata/struct_query.yaml
@@ -29,7 +29,7 @@
     StreamMaterialize { columns: [country, _row_id#0(hidden)], pk_columns: [_row_id#0] }
       StreamTableScan { table: mv1, columns: [country, _row_id#0], pk_indices: [1] }
 - sql: |
-    create materialized view v as select * from t;
+    create materialized view v as select t.* from t;
     select (v).country.city,(v.country).address,(country).city.address from v;
   create_source:
     row_format: protobuf
