--- a/src/frontend/test_runner/tests/testdata/subquery_expr_correlated.yaml
+++ b/src/frontend/test_runner/tests/testdata/subquery_expr_correlated.yaml
@@ -1,17 +1,27 @@
 - sql: |
     create table t1(x int, y int);
     create table t2(x int, y int);
-    select * from t1 where x>(select min(x) from t2 where t1.y=t2.y)
+    select * from t1 where x > (select 1.5 * min(x) from t2 where t1.y=t2.y and t2.y = 1000)
   logical_plan: |
     LogicalProject { exprs: [$1, $2], expr_alias: [x, y] }
       LogicalFilter { predicate: ($1 > $3) }
         LogicalApply { type: LeftOuter }
           LogicalScan { table: t1, columns: [_row_id#0, x, y] }
-          LogicalProject { exprs: [$0], expr_alias: [ ] }
+          LogicalProject { exprs: [(1.5:Decimal * $0)], expr_alias: [ ] }
             LogicalAgg { group_keys: [], agg_calls: [min($0)] }
               LogicalProject { exprs: [$1], expr_alias: [ ] }
-                LogicalFilter { predicate: (CorrelatedInputRef { index: 2, depth: 1 } = $2) }
+                LogicalFilter { predicate: (CorrelatedInputRef { index: 2, depth: 1 } = $2) AND ($2 = 1000:Int32) }
                   LogicalScan { table: t2, columns: [_row_id#0, x, y] }
+  optimized_logical_plan: |
+    LogicalProject { exprs: [$0, $1], expr_alias: [x, y] }
+      LogicalFilter { predicate: ($0 > (1.5:Decimal * $2)) }
+        LogicalProject { exprs: [$1, $2, $3], expr_alias: [ ,  ,  ] }
+          LogicalAgg { group_keys: [0, 1, 2], agg_calls: [min($3)] }
+            LogicalProject { exprs: [$0, $1, $2, $3], expr_alias: [ ,  ,  ,  ] }
+              LogicalJoin { type: LeftOuter, on: ($2 = $4) }
+                LogicalScan { table: t1, columns: [_row_id#0, x, y] }
+                LogicalFilter { predicate: ($1 = 1000:Int32) }
+                  LogicalScan { table: t2, columns: [x, y] }
 - sql: |
     create table t1(x int, y int);
     create table t2(x int, y int);
@@ -65,9 +75,8 @@
           LogicalFilter { predicate: ($2 = 100:Int32) AND (CorrelatedInputRef { index: 1, depth: 1 } = $1) AND ($1 = 1000:Int32) AND (CorrelatedInputRef { index: 2, depth: 1 } = $2) }
             LogicalScan { table: t2, columns: [_row_id#0, x, y] }
   optimized_logical_plan: |
-    LogicalProject { exprs: [$1, $2], expr_alias: [x, y] }
-      LogicalJoin { type: LeftSemi, on: ($1 = $5) AND ($2 = $6) }
-        LogicalScan { table: t1, columns: [_row_id#0, x, y] }
-        LogicalProject { exprs: [$1, $2, $1, $2], expr_alias: [x, y,  ,  ] }
-          LogicalFilter { predicate: ($2 = 100:Int32) AND ($1 = 1000:Int32) }
-            LogicalScan { table: t2, columns: [_row_id#0, x, y] }
+    LogicalProject { exprs: [$0, $1], expr_alias: [x, y] }
+      LogicalJoin { type: LeftSemi, on: ($0 = $2) AND ($1 = $3) }
+        LogicalScan { table: t1, columns: [x, y] }
+        LogicalFilter { predicate: ($1 = 100:Int32) AND ($0 = 1000:Int32) }
+          LogicalScan { table: t2, columns: [x, y] }
