feat(streaming): split chunks in hash agg

--- a/src/stream/Cargo.toml
+++ b/src/stream/Cargo.toml
@@ -20,6 +20,7 @@ futures = { version = "0.3", default-features = false, features = ["alloc"] }
 futures-async-stream = "0.2"
 hyper = "0.14"
 itertools = "0.10"
+iter-chunks = "0.1"
 lazy_static = "1"
 log = "0.4"
 memcomparable = { path = "../utils/memcomparable" }
